Minor letter-spacing fix

--- a/resources/css/base/typography.css
+++ b/resources/css/base/typography.css
@@ -79,7 +79,7 @@ p  {
     font-size: 3.5rem;
     line-height: 4.2rem;
     font-weight: 800;
-    letter-spacing: 0.25px;
+    letter-spacing: -2px;
 }
 
 .text--bold {
